<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="@string/pref_default_display_name"
        app:title="@string/pref_title_display_name"
        android:inputType="textCapWords"
        android:key="user_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"/>

    <EditTextPreference
        android:autofillHints="@string/pref_default_email_address"
        android:key="user_email_address"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:title="@string/pref_title_email_address" />
    <ListPreference
        android:defaultValue="false"
        android:entries="@array/pref_entries_favourite_social"
        android:entryValues="@array/pref_values_favourite_social"
        android:key="user_favourite_social"
        android:title="@string/pref_title_favourite_social"
        app:defaultValue="true" />

</PreferenceScreen>